(PC-30243)[PRO] fix: focus visible cropped on checkbox/search button

--- a/pro/src/pages/AdageIframe/app/components/OffersInstantSearch/OffersSearch/Autocomplete/Autocomplete.module.scss
+++ b/pro/src/pages/AdageIframe/app/components/OffersInstantSearch/OffersSearch/Autocomplete/Autocomplete.module.scss
@@ -159,3 +159,7 @@
     margin-right: rem.torem(4px) !important;
   }
 }
+
+.form-search-button:focus-visible {
+  z-index: 3;
+}
